css/slider.css
/* ... */
#slide-1:checked ~ .slider__holder .slider__item--2 {
  z-index: 1;
  transform: translateX(100px) scale(0.85);
}
@media (max-width: 768px) {
  #slide-1:checked ~ .slider__holder .slider__item--2 {
    opacity: 0.6;
  }
}
#slide-2:checked ~ .slider__holder .slider__item--2 {
  position: relative;
  z-index: 2;
  transform: translate(0) scale(1);
}
#slide-3:checked ~ .slider__holder .slider__item--2 {
  z-index: 1;
  transform: translateX(-100px) scale(0.85);
}
@media (max-width: 768px) {
  #slide-3:checked ~ .slider__holder .slider__item--2 {
    opacity: 0.6;
  }
}
#slide-4:checked ~ .slider__holder .slider__item--2 {
  z-index: 0;
  transform: translateX(-210px) scale(0.65);
}
@media (max-width: 900px) {
  #slide-4:checked ~ .slider__holder .slider__item--2 {
    transform: translateX(-170px) scale(0.65);
  }
}
@media (max-width: 768px) {
  #slide-4:checked ~ .slider__holder .slider__item--2 {
    opacity: 0;
  }
}
#slide-5:checked ~ .slider__holder .slider__item--2 {
  z-index: -1;
  opacity: 0;
  transform: translateX(-210px) scale(0.65);
}
#slide-1:checked ~ .slider__holder .slider__item--3 {
  z-index: 0;
  transform: translateX(210px) scale(0.65);
}
@media (max-width: 900px) {
  #slide-1:checked ~ .slider__holder .slider__item--3 {
    transform: translateX(170px) scale(0.65);
  }
}
@media (max-width: 768px) {
  #slide-1:checked ~ .slider__holder .slider__item--3 {
    opacity: 0;
  }
}
#slide-2:checked ~ .slider__holder .slider__item--3 {
  z-index: 1;
  transform: translateX(100px) scale(0.85);
}
@media (max-width: 768px) {
  #slide-2:checked ~ .slider__holder .slider__item--3 {
    opacity: 0.6;
  }
}
#slide-3:checked ~ .slider__holder .slider__item--3 {
  position: relative;
  z-index: 2;
  transform: translate(0) scale(1);
}
#slide-4:checked ~ .slider__holder .slider__item--3 {
  z-index: 1;
  transform: translateX(-100px) scale(0.85);
}
@media (max-width: 768px) {
  #slide-4:checked ~ .slider__holder .slider__item--3 {
    opacity: 0.6;
  }
}
#slide-5:checked ~ .slider__holder .slider__item--3 {
  z-index: 0;
  transform: translateX(-210px) scale(0.65);
}
@media (max-width: 900px) {
  #slide-5:checked ~ .slider__holder .slider__item--3 {
    transform: translateX(-170px) scale(0.65);
  }
}
@media (max-width: 768px) {
  #slide-5:checked ~ .slider__holder .slider__item--3 {
    opacity: 0;
  }
}
#slide-1:checked ~ .slider__holder .slider__item--4 {
  z-index: -1;
  opacity: 0;
  transform: translateX(210px) scale(0.65);
}
#slide-2:checked ~ .slider__holder .slider__item--4 {
  z-index: 0;
  transform: translateX(210px) scale(0.65);
}
@media (max-width: 900px) {
  #slide-2:checked ~ .slider__holder .slider__item--4 {
    transform: translateX(170px) scale(0.65);
  }
}
@media (max-width: 768px) {
  #slide-2:checked ~ .slider__holder .slider__item--4 {
    opacity: 0;
  }
}
#slide-3:checked ~ .slider__holder .slider__item--4 {
  z-index: 1;
  transform: translateX(100px) scale(0.85);
}
@media (max-width: 768px) {
  #slide-3:checked ~ .slider__holder .slider__item--4 {
    opacity: 0.6;
  }
}
#slide-4:checked ~ .slider__holder .slider__item--4 {
  position: relative;
  z-index: 2;
  transform: translate(0) scale(1);
}
#slide-5:checked ~ .slider__holder .slider__item--4 {
  z-index: 1;
  transform: translateX(-100px) scale(0.85);
}
@media (max-width: 768px) {
  #slide-5:checked ~ .slider__holder .slider__item--4 {
    opacity: 0.6;
  }
}
#slide-1:checked ~ .slider__holder .slider__item--5 {
  z-index: -1;
  opacity: 0;
  transform: translateX(210px) scale(0.65);
}
#slide-2:checked ~ .slider__holder .slider__item--5 {
  z-index: -1;
  opacity: 0;
  transform: translateX(210px) scale(0.65);
}
#slide-3:checked ~ .slider__holder .slider__item--5 {
  z-index: 0;
  transform: translateX(210px) scale(0.65);
}
@media (max-width: 900px) {
  #slide-3:checked ~ .slider__holder .slider__item--5 {
    transform: translateX(170px) scale(0.65);
  }
}
@media (max-width: 768px) {
  #slide-3:checked ~ .slider__holder .slider__item--5 {
    opacity: 0;
  }
}
#slide-4:checked ~ .slider__holder .slider__item--5 {
  z-index: 1;
  transform: translateX(100px) scale(0.85);
}
@media (max-width: 768px) {
  #slide-4:checked ~ .slider__holder .slider__item--5 {
    opacity: 0.6;
  }
}
#slide-5:checked ~ .slider__holder .slider__item--5 {
  position: relative;
  z-index: 2;
  transform: translate(0) scale(1);
}

/*--------------------------------------------------------------
3.0 Bullets
--------------------------------------------------------------*/
.bullets__item {
  transition: all 0.2s ease;
}
#slide-1:checked ~ .bullets .bullets__item--1 {
  background: var(--color-text);
}
#slide-2:checked ~ .bullets .bullets__item--2 {
  background: var(--color-text);
}
#slide-3:checked ~ .bullets .bullets__item--3 {
  background: var(--color-text);
}
#slide-4:checked ~ .bullets .bullets__item--4 {
  background: var(--color-text);
}
#slide-5:checked ~ .bullets .bullets__item--5 {
  background: var(--color-text);
}

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
1.0 Card
2.0 Slider
3.0 Bullets
4.0 Section
5.0 Button
--------------------------------------------------------------*/
/*--------------------------------------------------------------
1.0 Card
--------------------------------------------------------------*/
.slider-card {
  position: relative;
  display: block;
  min-height: 240px;
  border-radius: 8px;
  background: #fff;
  box-shadow:
    0 5px 20px 0 rgba(0, 0, 0, 0.05),
    0 2px 4px 0 rgba(0, 0, 0, 0.1);
}

/*--------------------------------------------------------------
2.0 Slider
--------------------------------------------------------------*/
.slider {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.slider__radio {
  display: none;
}
/* ... */

